[gd_scene load_steps=5 format=2]

[ext_resource path="res://1px square.png" type="Texture" id=1]
[ext_resource path="res://Scenes/StaticLine.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 1.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0.504381, 4.99543 )

[node name="Body" type="StaticBody2D"]
input_pickable = true
physics_material_override = SubResource( 1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 10 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[connection signal="input_event" from="." to="." method="_on_Body_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Body_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Body_mouse_exited"]
